# RAG

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/: deps.py  routes.py
app/cli/: evaluate.py  seed_demo.py
app/core/: config.py  errors.py  logging.py  middleware.py
app/db/: base.py  fts.py  init_db.py  models.py  session.py
app/schemas/: api.py
app/services/: chat.py  chunking.py  citations.py  conversations.py  documents.py  embeddings.py  evaluation.py  json_utils.py  knowledge_bases.py  logs.py  parsers.py  processing.py  rerankers.py  retrieval.py  storage.py  vector_store.py
app/workers/: celery_app.py  tasks.py
docs/: rag_project_interview_qa.md  rag_project_knowledge_summary.md
tests/: conftest.py  test_api_flow.py  test_chunking_and_eval.py  test_evaluate_cli.py  test_rerankers.py  test_storage.py
