[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-enterprise-rag"
version = "0.1.0"
description = "Single-user local enterprise document RAG knowledge base."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.0,<2",
    "celery>=5.4.0,<6",
    "fastapi>=0.115.0,<1",
    "openai>=1.35.0,<2",
    "pydantic-settings>=2.3.0,<3",
    "pypdf>=4.2.0,<6",
    "python-docx>=1.1.2,<2",
    "python-multipart>=0.0.9,<1",
    "redis>=5.0.0,<6",
    "requests>=2.32.0,<3",
    "sqlalchemy>=2.0.30,<3",
    "uvicorn[standard]>=0.30.0,<1",
]

[project.optional-dependencies]
ui = [
    "altair<5; python_version < '3.10'",
    "numpy<2; python_version < '3.10'",
    "streamlit==1.12.0; python_version < '3.10'",
    "streamlit>=1.36.0,<2; python_version >= '3.10'",
]
full = [
    "chromadb>=0.5.0,<1",
    "docling>=2.0.0,<3",
    "paddleocr>=2.7.0,<3",
]
dev = [
    "httpx>=0.27.0,<1",
    "mypy>=1.10.0,<2",
    "pytest>=8.2.0,<9",
    "ruff>=0.5.0,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.9"
plugins = []
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
